[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
resource_local_to_scene = true
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=5]
resource_local_to_scene = true
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 5 )

[node name="HUD" type="CanvasLayer"]
offset = Vector2( -10, 10 )
transform = Transform2D( 1, 0, 0, 1, -10, 10 )
script = ExtResource( 1 )

[node name="ManaBGRect" type="ColorRect" parent="."]
margin_left = 922.0
margin_top = -3.0
margin_right = 1024.0
margin_bottom = 16.0
color = Color( 0.262745, 0.262745, 0.262745, 0.698039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaRect" type="ColorRect" parent="."]
margin_left = 922.0
margin_top = -3.0
margin_right = 1024.0
margin_bottom = 16.0
color = Color( 0.568627, 0.168627, 0.580392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaLabel" type="Label" parent="."]
margin_left = 922.0
margin_right = 1024.0
margin_bottom = 14.0
text = "Mana"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 923.0
margin_top = 21.0
margin_right = 1025.0
margin_bottom = 35.0
text = "Powers"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoPowerButton" type="Button" parent="."]
margin_left = 922.0
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 60.0
text = "None"

[node name="StompButton" type="Button" parent="."]
margin_left = 922.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 84.0
text = "Stomp"

[node name="BoulderButton" type="Button" parent="."]
margin_left = 922.0
margin_top = 88.0
margin_right = 1024.0
margin_bottom = 108.0
text = "Boulder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PawnsRemainingContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -234.0
margin_top = -2.0
margin_right = -123.0
margin_bottom = 38.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="PawnsRemainingContainer"]
margin_right = 111.0
margin_bottom = 14.0
text = "Deaths: 0"

[node name="LoseLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -150.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 3 )
text = "You lose :("
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -150.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 4 )
text = "You win!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -180.0
margin_right = 175.0
margin_bottom = -80.0
custom_fonts/font = SubResource( 2 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NoPowerButton" to="." method="_on_NoPowerButton_pressed"]
[connection signal="pressed" from="StompButton" to="." method="_on_StompButton_pressed"]
[connection signal="pressed" from="BoulderButton" to="." method="_on_BoulderButton_pressed"]
[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
